# WaterNet_training_and_evaluation

./: .gitignore  ReadMe.md  license.txt  setup.cfg  setup.py
configuration_files/: path_configuration_format.yaml
scripts/: check_sentinel_data.py  check_training_file_quality.py  copy_merge_remove_sentinel_data.py  copy_model_outputs.py  download_data_then_run.py  download_usa_files.py  extract_hu4_from_wsb.py  get_training_data_types.py  look_at_vector_data.py  look_at_waterway_data.py  make_hydro_basin_arrows.py  make_test_val_lists.py  tdx_hydro_basin_downloads.py
scripts/data_downloads/: download_nhd_data.py  download_sentinel_tile_shapefile.py  download_usa_data_for_training.py  generate_training_data.py  hu4_download_links.txt  tdx_hydro_basin_downloads.py  wsb_download_link.txt
scripts/deploy/: deploy_on_world.py  make_xyz_tile_gdf.py
scripts/evaluate_on_world/: evaluate_on_world.py  make_sentinel_composites.py
scripts/training/: evaluate_model_just_water.py  test_waternet.py  train_just_waterways.py  train_waternet.py  train_waterways_and_trails.py
src/water/: basic_functions.py  paths.py
src/water/data_functions/: move_files.py
src/water/deployment_functions/: deploy_on_polygon.py  predict_data_stream.py  prepare_data_main.py  reference_grids.py
src/water/loss_functions/: loss_functions.py
src/water/make_country_waterways/: add_weight.py  cut_data.py  distance_to_water.py  evaluate.py  evaluate_data_stream.py  investigate_output.py  make_country_elevation_tif.py  make_country_grids.py  merge_prepared_data.py  prepare_data_main.py  (+3 more)
(+32 files in other folders)
