[semantic_release]
version_variable = water/__init__.py:__version__


[metadata]
name = water
description = A package for finding water
version = attr: water.__version__
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific :: Travel Time
    Topic :: Scientific :: Graph model
    Programming Language :: Cython
    Programming Language :: Python

[options]
package_dir=
    =src
packages=find:
include_package_data = True
setup_requires =
    cython>=0.29.*
install_requires =
    fastparquet==0.8.3
    geopandas==0.14.3
    geopy==2.2.0
    networkx==3.0
    numpy==1.24.1
    pandas==2.0.1
    py7zr==0.20.2
    pyarrow==12.0.0
    pystac_client==0.5.1
    planetary-computer==0.5.1
    PyYAML==6.0
    rasterio==1.3.6
    scikit-learn==1.2.1
    rioxarray==0.13.4
    requests==2.31.0
    Shapely==2.0.1
    stackstac==0.4.3
;[options.entry_points]
;console_scripts =
;    bridges = bridges.scripts.bridges_cli:main
[options.packages.find]
where=src
exclude=
    data
    build
    cache
    scripts
[options.package_data]
* = *.md, *.txt